# ai4scr-data

./: .flake8  .gitignore  .travis.yml  README.md  dev_requirements.txt  pyproject.toml  setup.cfg  setup.py  test.csv
blueprint/: __init__.py  sphinx_documentations.py
blueprint/complex_module/: __init__.py  core.py
blueprint/complex_module/tests/: test_core.py
blueprint/tests/: test_module.py
dataset/: __init__.py  _utils.py  data.py  datasets.py  examples.py  typing.py  utils.py
docs/: api.rst  conf.py  index.rst  intro.rst  markdown_index.md
docs/blueprint_api/: blueprint.complex_module.core.rst  blueprint.complex_module.rst  blueprint.complex_module.tests.rst  blueprint.complex_module.tests.test_core.rst  blueprint.module.rst  blueprint.rst  blueprint.sphinx_documentations.rst  blueprint.tests.rst  blueprint.tests.test_module.rst
src/ai4scr_data_utility/: __init__.py  examples.py  hashing.py
src/dataset/: __init__.py
